hydroflow/tests/compile-fail/surface_merge_badtypes.stderr
error[E0271]: type mismatch resolving `<impl Iterator<Item = char> as IntoIterator>::Item == {integer}`
 --> tests/compile-fail/surface_merge_badtypes.rs:7:9
  |
5 |         m = merge() -> for_each(std::mem::drop);
  |             ------- required by a bound introduced by this call
6 |         source_iter(0..10) -> m;
7 |         source_iter("hello".chars()) -> m;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected integer, found `char`
  |
note: required by a bound in `std::iter::Iterator::chain`
 --> $RUST/core/src/iter/traits/iterator.rs
  |
  |         U: IntoIterator<Item = Self::Item>,
  |                         ^^^^^^^^^^^^^^^^^ required by this bound in `Iterator::chain`

error[E0271]: expected `impl Iterator<Item = char>` to be an iterator that yields `{integer}`, but it yields `char`
 --> tests/compile-fail/surface_merge_badtypes.rs:5:13
  |
5 |         m = merge() -> for_each(std::mem::drop);
  |             ^^^^^^^ expected integer, found `char`
  |
  = note: required for `std::iter::Chain<impl Iterator<Item = {integer}>, impl Iterator<Item = char>>` to implement `Iterator`
note: required by a bound in `check_op_1v1`
 --> tests/compile-fail/surface_merge_badtypes.rs:5:13
  |
5 |         m = merge() -> for_each(std::mem::drop);
  |             ^^^^^^^ required by this bound in `check_op_1v1`
